--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "moduleNameMapper": {
-      "^(.*)\\.js$": "$1"
+      "^(.*)\\.js$": "$1",
+      "^uuid$": "<rootDir>/../node_modules/uuid/dist/index.js"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
