--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,76 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build output
+dist
+build
+*.tsbuildinfo
+
+# Testing
+coverage
+.nyc_output
+*.lcov
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pino-*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.example
+
+# OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE
+.vscode
+.idea
+*.sublime-project
+*.sublime-workspace
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.tmproj
+*.code-workspace
+
+# Temporary files
+tmp
+temp
+*.tmp
+*.bak
+*.cache
+
+# Docker
+docker-compose.override.yml
+
+# Prisma
+prisma/*.db
+prisma/*.db-journal
+
+# AWS and deployment
+.aws
+*.pem
+task-def-*.json
+
+# Misc
+.eslintcache
+.serverless
+.webpack
+.dynamodb
